data/derived/sp14/progs/unify/prog4701.ml.out
Characters 112-119:
  else sequence sumList (digitsOfInt x) i+1 in
                ^^^^^^^
Error: This expression has type int list -> int
       but an expression was expected of type int
